# TauriGPT

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: SetAPI.svelte
