[package]
name = "tauri_gpt"
version = "0.0.1"
description = "A cross-platform chatgpt that uses your api key and is built with Tauri and Svelte"
authors = ["Brenden Ferguson", "SvelteKit Team", "Tauri Team"] 
license = "MIT"
repository = "taurigpt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
